src/main/metadata-excluded/objects/Event_Tool_Kit_Quota__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Q1_Amount__c</fullName>
        <label>Q1 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Amount__c</fullName>
        <label>Q2 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Amount__c</fullName>
        <label>Q3 Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Event Tool Kit Quota</label>
</CustomObject>